k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: luckygas
  labels:
    app.kubernetes.io/name: luckygas
    app.kubernetes.io/part-of: luckygas-system
    environment: production
